fix: moved to git-cliff v4 and now this creates new set of files which needs to be deleted

--- a/action.yaml
+++ b/action.yaml
@@ -122,12 +122,11 @@ runs:
         GITHUB_REPO: ${{ github.repository }}
 
     # Move the generated changelog to the root folder and clean up.
-    - name: Move CHANGELOG.md to root directory
+    - name: Remove git-cliff files
       id: move-log
       run: |
-        cp ./git-cliff/CHANGELOG.md ./
-        rm ./git-cliff/CHANGELOG.md
-        rmdir ./git-cliff/
+        rm -rf git-cliff*
+        rm -rf bin
       shell: bash
 
     - name: Create pull request
