fix(git-cliff): removed the generated `./bin` folder and files

--- a/action.yaml
+++ b/action.yaml
@@ -153,6 +153,7 @@ runs:
         rm ./git-cliff/CHANGELOG.md
         rmdir ./git-cliff/
         rm -rf ./git-cliff*
+        rm -rf ./bin
       shell: bash
 
     - name: Create pull request
