--- a/.github/ISSUE_TEMPLATE/question.yml
+++ b/.github/ISSUE_TEMPLATE/question.yml
@@ -1,7 +1,7 @@
 name: ❓ Question
 description: Ask a question
-title: '[QUESTION] <title>'
-labels: ['type: discussion']
+title: "[QUESTION] <title>"
+labels: ["type: question"]
 body:
   - type: textarea
     attributes:
