--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,19 +1,16 @@
-name: Reelease
+name: Release
 on:
   pull_request:
     branches:
       - main
     types:
       - closed
-
-permissions:
-  contents: write
-  pull-requests: write
-
 jobs:
   release:
     runs-on: ubuntu-latest
-
+    permissions:
+      contents: write
+      pull-requests: write
     steps:
       - name: Create release
         uses: dxfrontier/gh-action-release@main
